--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div id="page">
 <div id="logo">
-<img  class wag kana src="wagkana01.png" alt="The Analog Specialists" />
+<img src="background1.png" alt="The Analog Specialists" />
 </div>
 <ul id="navigation">
 <li><a href="#" class="on">Home</a></li>
@@ -17,7 +17,7 @@
 <li><a href="#">Contact</a></li>
 </ul>
 <p>
-<img src="wag kana mika.png" alt="Fender Rhodes, Hohner Clavinet,
+<img src="background2.png" alt="Fender Rhodes, Hohner Clavinet,
 
 and Wurlitzer EP200" />
 </p>
